2001-03-18  Kevin Buettner  <kevinb@redhat.com>

	* acconfig.h (HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS)
	(HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS)
	(HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS): New configure macros.
	* configure.in (HAVE_STRUCT_LINK_MAP32): Move this test out
	of the Solaris procfs testing section.  Instead, group with...
	(HAVE_STRUCT_LINK_MAP_WITH_L_MEMBERS)
	(HAVE_STRUCT_LINK_MAP_WITH_LM_MEMBERS)
	(HAVE_STRUCT_SO_MAP_WITH_SOM_MEMBERS): New <link.h> tests.
	* configure: Regenerate.
	* config.in: Regenerate.

	* solib-legacy.c (legacy_svr4_fetch_link_map_offsets): Use
	new configure macros to choose which (if any) code to
	compile in.  Added code to explicitly handle *BSD systems;
	these systems were previously handled only through macro
	redefinition.  Also, due to the way the autoconf tests are set
	up, this function will no longer return a non-zero value when
	GDB is configured as a cross debugger.  I.e, cross debuggers
	will no longer be able to "accidentally" get the host system's
	link map offsets.

2001-03-18  Kevin Buettner  <kevinb@redhat.com>

	* config/i386/nbsd.mh (NATDEPFILES): List all files on the same
	line to avoid build problem on NetBSD 1.4.

2001-03-17  Michael Chastain  <chastain@redhat.com>

	* win32-nat.c (child_attach): check args for NULL before passing
	to strtoul.  This fixes PR gdb/43.

2001-03-17  Mark Kettenis  <kettenis@gnu.org>

	* i387-nat.h: Doc Fix.

	* i386-tdep.c: Fix formatting.
	(i386_get_frame_setup, i386_follow_jump, codestream_read,
	codestream_seek, codestream_fill, skip_trampoline_code,
	gdb_print_insn_i386, _initialize_i386_tdep): Remove redundant
	prototypoes.

2001-03-17  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/tm-linux.h (TARGET_ANALYZE_FLOATING): Remove.  It's
	no longer used.  Also remove associated FIXME.

2001-03-16  Andrew Cagney  <ac131313@redhat.com>

	* gdbarch.sh: Add classes ``m'' and ``M'' for pure multi-arch.  Do
	not generate macro wrappers for multi-arch functions or
	predicates.